[package]
name = "aoc2020"
version = "0.1.0"
authors = ["James Turner <james.turner@metaswitch.com>"]
edition = "2018"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt =  "0.3"
anyhow = "1"
regex = "1"
lazy_static = "1"
itertools = "0.9"
ndarray = "0.14"
multiset = "0"